--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
                     <span class="btn-text">Register Now</span>
                     <span class="btn-border"></span>
                 </a>-->
-                <a href="https://forms.gle/TSAXx7FNM1T56Yrg8" class="btn-tech btn-tech-primary" target="_blank">
+                <a href="https://forms.gle/TSAXx7FNM1T56Yrg8" class="btn-tech btn-tech-secondary" target="_blank">
                     <span class="btn-text">Register</span>
                     <span class="btn-border"></span>
                 </a>
-                <a href="problem-statements.html" class="btn-tech btn-tech-primary">
+                <a href="problem-statements.html" class="btn-tech btn-tech-secondary">
                     <span class="btn-text">Problem Statements</span>
                     <span class="btn-border"></span>
                 </a>
@@ -347,7 +347,7 @@
                     <li>Open-source libraries, APIs, and datasets may be used.</li>
                     <li>Judges’ decisions are final and must be accepted by all participants.</li>
                     <li>Only Artificial Intelligence and Data Science students are eligible to participate.</li>
-                    <li>Registration is free of cost (food per head is 150).</li>
+                    <li>₹150 per head for Registration.</li>
                     <li>Teams must be present at the venue on time; latecomers may be disqualified.</li>
                     <li>Each team must bring their own laptops, chargers, and required tools.</li>
                     <li>Internet facilities will be provided, but participants are encouraged to have a backup
@@ -371,6 +371,7 @@
         </div>
         <div class="contact-container fade-in"></div>
         <div class="clgadd">
+            <p>Address: </p>
             <p>Saranathan College of Engineering Venkateswara Nagar, </p>
             <p> Trichy-Madurai Main Road (NH 45 B), Edamalaipatti Pudhur (Post),</p>
             <p> Panjappur, Thiruchirappalli - 620012</p>
