--- a/problem-statements.html
+++ b/problem-statements.html
@@ -66,7 +66,7 @@
     <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 2rem;">
         <header class="problems-header fade-in">
             <h1 class="section-title">Problem Statements</h1>
-            <p class="section-subtitle">Challenging problems demanding innovative Gen AI solutions</p>
+            <p class="section-subtitle"><br>Challenging problems demanding innovative Gen AI solutions</p>
         </header>
 
         <!-- Filters -->
