Third - PS changes

--- a/problem-statements.html
+++ b/problem-statements.html
@@ -188,7 +188,7 @@
             <!-- HAD-18: AI for Everyone -->
             <div class="problem-card fade-in" data-category="ai-everyone" data-problem-id="HAD-18">
                 <span class="problem-tag">AI for Everyone</span>
-                <h3 class="problem-title">HAD-18: Community Climate Action Platform</h3>
+                <h3 class="problem-title">HAD-18: AI-Generated Climate Futures (Multiple Timelines)</h3>
             </div>
 
             <!-- HAD-19: AI for Everyone -->
@@ -212,7 +212,7 @@
             <!-- HAD-22: Campus to Corporate -->
             <div class="problem-card fade-in" data-category="campus-corporate" data-problem-id="HAD-22">
                 <span class="problem-tag">Campus to Corporate</span>
-                <h3 class="problem-title">HAD-22: Internship-to-Full-Time Conversion Predictor</h3>
+                <h3 class="problem-title">HAD-22: AI That Detects Learning Plateaus Early</h3>
             </div>
 
             <!-- HAD-23: Campus to Corporate -->
