Four-Timer-Local

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>HackWell'26</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/jpeg" href="assets/had-logo.jpeg">
-    <link href="https://fonts.cdnfonts.com/css/digital-7" rel="stylesheet">
-    <!-- AOS for easier animations fallback if needed, but using IntersectionObserver -->
 </head>
 
 <body>
@@ -112,7 +110,7 @@
             <li><a href="#rules">Rules</a></li>
             <li><a href="#sponsors">Sponsors</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="problem-statements.html">Problem Statementst</a></li>
+            <li><a href="problem-statements.html">Problem Statements</a></li>
         </ul>
     </div>
 
@@ -347,7 +345,7 @@
                     <li>Open-source libraries, APIs, and datasets may be used.</li>
                     <li>Judges’ decisions are final and must be accepted by all participants.</li>
                     <li>Only Artificial Intelligence and Data Science students are eligible to participate.</li>
-                    <li>₹150 per head for Registration.</li>
+                    <li>No Registration Fee. ₹150 applicable for final-round participants.</li>
                     <li>Teams must be present at the venue on time; latecomers may be disqualified.</li>
                     <li>Each team must bring their own laptops, chargers, and required tools.</li>
                     <li>Internet facilities will be provided, but participants are encouraged to have a backup
