Five-Content Justification

--- a/index.html
+++ b/index.html
@@ -203,27 +203,42 @@
         <div class="theme-grid">
             <div class="card fade-in delay-100">
                 <h3>Climate Tech & Green Innovation</h3>
-                <p>Developing sustainable solutions using AI to monitor, model, and mitigate environmental challenges
+                <!-- <p>Developing sustainable solutions using AI to monitor, model, and mitigate environmental challenges
+                    for a greener future.</p> -->
+                <p style="text-align: justify;">Developing sustainable solutions using AI to monitor, model, and
+                    mitigate environmental challenges
                     for a greener future.</p>
             </div>
             <div class="card fade-in delay-200">
                 <h3>AI for Everyone</h3>
-                <p>Democratizing Artificial Intelligence by creating accessible, inclusive, and user-friendly tools that
+                <!-- <p>Democratizing Artificial Intelligence by creating accessible, inclusive, and user-friendly tools that
+                    empower individuals across all domains.</p> -->
+                <p style="text-align: justify;">Democratizing Artificial Intelligence by creating accessible, inclusive,
+                    and user-friendly tools that
                     empower individuals across all domains.</p>
             </div>
             <div class="card fade-in delay-300">
                 <h3>Campus to Corporate</h3>
-                <p>Bridging the gap between academic learning and industry demands through intelligent career
+                <!-- <p>Bridging the gap between academic learning and industry demands through intelligent career
+                    development and skill-mapping systems.</p> -->
+                <p style="text-align: justify;">Bridging the gap between academic learning and industry demands through
+                    intelligent career
                     development and skill-mapping systems.</p>
             </div>
             <div class="card fade-in delay-400">
                 <h3>Applied Generative AI</h3>
-                <p>Harnessing the power of LLMs and generative models to create novel applications in content creation,
+                <!-- <p>Harnessing the power of LLMs and generative models to create novel applications in content creation,
+                    coding, and design.</p> -->
+                <p style="text-align: justify;">Harnessing the power of LLMs and generative models to create novel
+                    applications in content creation,
                     coding, and design.</p>
             </div>
             <div class="card fade-in delay-500">
                 <h3>Intelligent Systems</h3>
-                <p>Building autonomous, adaptive, and efficient systems that integrate hardware and software for smart
+                <!-- <p>Building autonomous, adaptive, and efficient systems that integrate hardware and software for smart
+                    automation and decision-making.</p> -->
+                <p style="text-align: justify;">Building autonomous, adaptive, and efficient systems that integrate
+                    hardware and software for smart
                     automation and decision-making.</p>
             </div>
         </div>
@@ -254,19 +269,37 @@
         <div class="about-grid">
             <div class="about-col fade-in">
                 <h3>About Saranathan College of Engineering</h3>
-                <p>
+                <!-- <p>
+                    Saranathan College of Engineering was founded by ‘Vidya Seva Ratnam’ and ‘Guru Seva Mani’ Auditor
+                    Sri. K. Santhanam in the year 1998. It is a self-financing institution approved by AICTE and
+                    attained autonomous status in 2025. The college currently has an annual intake of 720 students
+                    across 10 undergraduate programs and 132 students across 5 postgraduate programs.
+                </p> -->
+                <p style="text-align: justify;">
                     Saranathan College of Engineering was founded by ‘Vidya Seva Ratnam’ and ‘Guru Seva Mani’ Auditor
                     Sri. K. Santhanam in the year 1998. It is a self-financing institution approved by AICTE and
                     attained autonomous status in 2025. The college currently has an annual intake of 720 students
                     across 10 undergraduate programs and 132 students across 5 postgraduate programs.
                 </p>
-                <p>
+                <!-- <p>
+                    Among its academic offerings, the Department of Artificial Intelligence and Data Science, introduced
+                    in 2021, stands out for its focus on emerging technologies and innovation. The department actively
+                    promotes hands-on learning and problem-solving through initiatives such as the Hackwell Hackathon,
+                    K-Thursday, and its own student-driven Odysseys Club.
+                </p> -->
+                <p style="text-align: justify;">
                     Among its academic offerings, the Department of Artificial Intelligence and Data Science, introduced
                     in 2021, stands out for its focus on emerging technologies and innovation. The department actively
                     promotes hands-on learning and problem-solving through initiatives such as the Hackwell Hackathon,
                     K-Thursday, and its own student-driven Odysseys Club.
                 </p>
-                <p>
+                <!-- <p>
+                    With consistent placement records, active participation in professional bodies, entrepreneurship
+                    initiatives supported by the Government of Tamil Nadu, and a vibrant student community, Saranathan
+                    College of Engineering continues to be a preferred destination for aspiring engineers and
+                    innovators.
+                </p> -->
+                <p style="text-align: justify;">
                     With consistent placement records, active participation in professional bodies, entrepreneurship
                     initiatives supported by the Government of Tamil Nadu, and a vibrant student community, Saranathan
                     College of Engineering continues to be a preferred destination for aspiring engineers and
@@ -276,13 +309,25 @@
 
             <div class="about-col fade-in">
                 <h3>About HackWell</h3>
-                <p>
+                <!-- <p>
+                    Hackwell serves as a powerful catalyst for innovation and experiential learning by transforming
+                    ideas into impactful, real-world solutions. The hackathon creates an immersive environment where
+                    students move beyond classroom learning and actively engage with practical challenges using
+                    cutting-edge technologies.
+                </p> -->
+                <p style="text-align: justify;">
                     Hackwell serves as a powerful catalyst for innovation and experiential learning by transforming
                     ideas into impactful, real-world solutions. The hackathon creates an immersive environment where
                     students move beyond classroom learning and actively engage with practical challenges using
                     cutting-edge technologies.
                 </p>
-                <p>
+                <!-- <p>
+                    Hackwell fosters a culture of creativity and continuous learning, encouraging students to think
+                    independently, experiment boldly, and push the boundaries of innovation. It also acts as a vital
+                    bridge between academia and industry by exposing participants to current technological trends,
+                    industry-relevant problem statements, and real-time development practices.
+                </p> -->
+                <p style="text-align: justify;">
                     Hackwell fosters a culture of creativity and continuous learning, encouraging students to think
                     independently, experiment boldly, and push the boundaries of innovation. It also acts as a vital
                     bridge between academia and industry by exposing participants to current technological trends,
