Six-Template-link

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <li><a href="#sponsors">Sponsors</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="problem-statements.html">Problem Statements</a></li>
+            <li><a href="assets/HackWell-Temp.pptx" download>PPT Template</a></li>
         </ul>
     </div>
 
@@ -187,6 +188,10 @@
                 </a>
                 <a href="problem-statements.html" class="btn-tech btn-tech-secondary">
                     <span class="btn-text">Problem Statements</span>
+                    <span class="btn-border"></span>
+                </a>
+                <a href="assets/HackWell-Temp.pptx" class="btn-tech btn-tech-secondary" download>
+                    <span class="btn-text">PPT Template</span>
                     <span class="btn-border"></span>
                 </a>
             </div>
@@ -351,9 +356,9 @@
                 <p style="color: var(--text-secondary);">Start forming your teams and registering for the event.</p>
             </div>
             <div class="timeline-item fade-in">
-                <div class="timeline-date">5 February 2026</div>
-                <h3 class="timeline-title">Registration Closes</h3>
-                <p style="color: var(--text-secondary);">Final deadline for team registrations.</p>
+                <div class="timeline-date">12 February 2026</div>
+                <h3 class="timeline-title">Registration & PPT Submission Ends</h3>
+                <p style="color: var(--text-secondary);">Final deadline for team registrations and idea submission.</p>
             </div>
             <div class="timeline-item fade-in">
                 <div class="timeline-date">23 February 2026</div>
@@ -413,7 +418,7 @@
             <h2 class="section-title">Contact Us</h2>
         </div>
         <div class="contact-container fade-in"></div>
-        <div class="clgadd">
+        <div class="clgadd" style=" color: var(--text-secondary);">
             <p>Address: </p>
             <p>Saranathan College of Engineering Venkateswara Nagar, </p>
             <p> Trichy-Madurai Main Road (NH 45 B), Edamalaipatti Pudhur (Post),</p>
