--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <span class="btn-text">Register Now</span>
                     <span class="btn-border"></span>
                 </a>-->
-                <a href="https://forms.gle/TSAXx7FNM1T56Yrg8" class="btn-tech btn-tech-secondary" target="_blank">
+                <a href="https://forms.gle/3D6FdqTnFqZxdtY57" class="btn-tech btn-tech-secondary" target="_blank">
                     <span class="btn-text">Register</span>
                     <span class="btn-border"></span>
                 </a>
@@ -356,9 +356,9 @@
                 <p style="color: var(--text-secondary);">Start forming your teams and registering for the event.</p>
             </div>
             <div class="timeline-item fade-in">
-                <div class="timeline-date">12 February 2026</div>
-                <h3 class="timeline-title">Registration & PPT Submission Ends</h3>
-                <p style="color: var(--text-secondary);">Final deadline for team registrations and idea submission.</p>
+                <div class="timeline-date">08 February 2026</div>
+                <h3 class="timeline-title">Registration Closes</h3>
+                <p style="color: var(--text-secondary);">Final deadline for team registrations.</p>
             </div>
             <div class="timeline-item fade-in">
                 <div class="timeline-date">23 February 2026</div>
