--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     style="color: var(--text-secondary); line-height: 1.8; margin-left: 1.5rem; display: grid; gap: 1rem;">
                     <li>Each team should consist of only four members.</li>
                     <li>All notifications will be shared through the Team Leader.</li>
-                    <li>Teams must submit their problem statement and abstract within the specified deadline.</li>
+                    <li>Teams must submit their problem statement within the specified deadline.</li>
                     <li>Open-source libraries, APIs, and datasets may be used.</li>
                     <li>Judges’ decisions are final and must be accepted by all participants.</li>
                     <li>Only Artificial Intelligence and Data Science students are eligible to participate.</li>
