--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <span class="btn-text">Register Now</span>
                     <span class="btn-border"></span>
                 </a>-->
-                <a href="https://forms.gle/3D6FdqTnFqZxdtY57" class="btn-tech btn-tech-secondary" target="_blank">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDhjSdDLU7FeFXmwT9LVAeJRNI0WU0IRZJkAIQU9hDehhVpw/viewform?usp=preview" class="btn-tech btn-tech-secondary" target="_blank">
                     <span class="btn-text">Register</span>
                     <span class="btn-border"></span>
                 </a>
