--- a/problem-statements.html
+++ b/problem-statements.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problem Statements | HackWell'26</title>
     <link rel="stylesheet" href="css/problem-statements.css">
+    <link rel="icon" type="image/jpeg" href="assets/had-logo.jpeg">
 </head>
 
 <body>
