--- a/index.html
+++ b/index.html
@@ -177,15 +177,16 @@
             </div>
 
             <div class="hero-btns fade-in">
-                <!--<a href="#" onclick="showHolographicAlert('Registration opens on Feb 2'); return false;"
-                    class="btn-tech btn-tech-primary">
-                    <span class="btn-text">Register Now</span>
-                    <span class="btn-border"></span>
-                </a>-->
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDhjSdDLU7FeFXmwT9LVAeJRNI0WU0IRZJkAIQU9hDehhVpw/viewform?usp=preview" class="btn-tech btn-tech-secondary" target="_blank">
+                <a href="#" onclick="showHolographicAlert('Registration Ended'); return false;"
+                    class="btn-tech btn-tech-secondary">
                     <span class="btn-text">Register</span>
                     <span class="btn-border"></span>
                 </a>
+                <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDhjSdDLU7FeFXmwT9LVAeJRNI0WU0IRZJkAIQU9hDehhVpw/viewform?usp=preview"
+                    class="btn-tech btn-tech-secondary" target="_blank">
+                    <span class="btn-text">Register</span>
+                    <span class="btn-border"></span>
+                </a> -->
                 <a href="problem-statements.html" class="btn-tech btn-tech-secondary">
                     <span class="btn-text">Problem Statements</span>
                     <span class="btn-border"></span>
